sfdx-source/apex-queue/main/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <description>Stores each durable queue job, including its payload, lifecycle state, retry policy, lease data, and resumable execution fields.</description>
    <label>Job</label>
    <nameField>
        <displayFormat>Job-{00000000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>