sfdx-source/apex-queue/main/objects/Job__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>AsyncApexJob Id that currently owns execution: batch worker for WORKER jobs or queueable executor for queueable-mode jobs.</description>
    <inlineHelpText>Set when a batch worker claims the job or when a queueable executor is enqueued.</inlineHelpText>
    <label>Async Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>