sfdx-source/apex-queue/main/objects/Job__c/fields/AttemptsMade__c.field-meta.xml
<CustomField>
    <fullName>AttemptsMade__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of attempts already used by this job.</description>
    <inlineHelpText>Incremented each time a worker starts processing the job.</inlineHelpText>
    <label>Attempts Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>