sfdx-source/apex-queue/main/objects/Job__c/fields/AvailableAt__c.field-meta.xml
<CustomField>
    <fullName>AvailableAt__c</fullName>
    <description>Earliest time the batch worker may claim this job.</description>
    <inlineHelpText>Jobs scheduled for the future stay delayed until this time.</inlineHelpText>
    <label>Available At</label>
    <type>DateTime</type>
</CustomField>