sfdx-source/apex-queue/main/objects/Job__c/fields/BackoffJitter__c.field-meta.xml
<CustomField>
    <fullName>BackoffJitter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Retry backoff jitter ratio used to spread retry eligibility inside the calculated backoff window.</description>
    <inlineHelpText>Ratio from 0 to 1 used to randomize retry eligibility.</inlineHelpText>
    <label>Backoff Jitter</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>