sfdx-source/apex-queue/main/objects/Job__c/fields/BackoffType__c.field-meta.xml
<CustomField>
    <fullName>BackoffType__c</fullName>
    <description>Retry backoff strategy selected for this job.</description>
    <inlineHelpText>Determines how the next retry time is calculated after a failed attempt.</inlineHelpText>
    <label>Backoff Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EXPONENTIAL</fullName>
                <label>Exponential</label>
            </value>
            <value>
                <fullName>FIXED</fullName>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>