sfdx-source/apex-queue/main/objects/Job__c/fields/BackoffValue__c.field-meta.xml
<CustomField>
    <fullName>BackoffValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Base retry backoff value used together with the selected backoff type.</description>
    <inlineHelpText>Base backoff value in minutes.</inlineHelpText>
    <label>Backoff Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>