sfdx-source/apex-queue/main/objects/Job__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Optional indexed job category for business SOQL lookups.</description>
    <externalId>true</externalId>
    <inlineHelpText>Optional indexed job category for business SOQL lookups.</inlineHelpText>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>