sfdx-source/apex-queue/main/objects/Job__c/fields/Checkpoint__c.field-meta.xml
<CustomField>
    <description>Serialized processor-defined state persisted between cooperative job executions.</description>
    <fullName>Checkpoint__c</fullName>
    <inlineHelpText>Persisted checkpoint used to resume deferred work in a later run.</inlineHelpText>
    <label>Checkpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>