sfdx-source/apex-queue/main/objects/Job__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>Optional indexed correlation id for tracing work across systems or business processes.</description>
    <externalId>true</externalId>
    <inlineHelpText>Optional indexed correlation id for cross-system SOQL lookups.</inlineHelpText>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>