sfdx-source/apex-queue/main/objects/Job__c/fields/Data__c.field-meta.xml
<CustomField>
    <description>Serialized job payload persisted for processor execution.</description>
    <fullName>Data__c</fullName>
    <inlineHelpText>Serialized data passed to the processor when the job runs.</inlineHelpText>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>