sfdx-source/apex-queue/main/objects/Job__c/fields/DependencyCanceledPolicy__c.field-meta.xml
<CustomField>
    <fullName>DependencyCanceledPolicy__c</fullName>
    <description>Controls how this child job affects its parent when the child is canceled.</description>
    <inlineHelpText>Parent dependency handling when this child job is canceled.</inlineHelpText>
    <label>Dependency Canceled Policy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CANCEL_PARENT</fullName>
                <label>Cancel Parent</label>
            </value>
            <value>
                <fullName>DEFAULT</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>FAIL_PARENT</fullName>
                <label>Fail Parent</label>
            </value>
            <value>
                <fullName>IGNORE_DEPENDENCY</fullName>
                <label>Ignore Dependency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>