sfdx-source/apex-queue/main/objects/Job__c/fields/DependencyFailurePolicy__c.field-meta.xml
<CustomField>
    <fullName>DependencyFailurePolicy__c</fullName>
    <description>Controls how this child job affects its parent when the child fails.</description>
    <inlineHelpText>Parent dependency handling when this child job fails.</inlineHelpText>
    <label>Dependency Failure Policy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CONTINUE_PARENT</fullName>
                <label>Continue Parent</label>
            </value>
            <value>
                <fullName>DEFAULT</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>FAIL_PARENT</fullName>
                <label>Fail Parent</label>
            </value>
            <value>
                <fullName>IGNORE_DEPENDENCY</fullName>
                <label>Ignore Dependency</label>
            </value>
            <value>
                <fullName>REMOVE_DEPENDENCY</fullName>
                <label>Remove Dependency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>