sfdx-source/apex-queue/main/objects/Job__c/fields/DependencyRepairCheckedAt__c.field-meta.xml
<CustomField>
    <fullName>DependencyRepairCheckedAt__c</fullName>
    <description>Timestamp when maintenance last checked whether this waiting parent could be released.</description>
    <inlineHelpText>Used as a fair rotation cursor when maintenance repairs stale dependency graphs.</inlineHelpText>
    <label>Dependency Repair Checked At</label>
    <type>DateTime</type>
</CustomField>