sfdx-source/apex-queue/main/objects/Job__c/fields/ExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>ExecutionMode__c</fullName>
    <defaultValue>&quot;WORKER&quot;</defaultValue>
    <description>Required execution lane. WORKER uses the durable batch worker. QUEUEABLE_SERIAL and QUEUEABLE_CONCURRENT use isolated queueable transport. INVOCABLE uses Flow Scheduled Path handoff.</description>
    <inlineHelpText>WORKER is the default. Queueable modes use QueueableDispatch__c. INVOCABLE is isolated from worker and queueable runtime ownership.</inlineHelpText>
    <label>Execution Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>INVOCABLE</fullName>
                <label>Invocable</label>
            </value>
            <value>
                <fullName>QUEUEABLE_CONCURRENT</fullName>
                <label>Queueable Concurrent</label>
            </value>
            <value>
                <fullName>QUEUEABLE_SERIAL</fullName>
                <label>Queueable Serial</label>
            </value>
            <value>
                <fullName>WORKER</fullName>
                <default>true</default>
                <label>Worker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>