sfdx-source/apex-queue/main/objects/Job__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Optional caller-provided external identifier used for dedupe or idempotent enqueue behavior. Length is capped so QueueName__c + ":" + ExternalId__c fits the internal queue-scoped unique key.</description>
    <inlineHelpText>Optional stable external id used for dedupe or idempotent enqueue behavior. Maximum length is 174 characters.</inlineHelpText>
    <label>External Id</label>
    <length>174</length>
    <type>Text</type>
</CustomField>