sfdx-source/apex-queue/main/objects/Job__c/fields/FailedReason__c.field-meta.xml
<CustomField>
    <description>Failure reason captured from the most recent failed attempt.</description>
    <fullName>FailedReason__c</fullName>
    <inlineHelpText>Last failure message or exception summary for the job.</inlineHelpText>
    <label>Failed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>