sfdx-source/apex-queue/main/objects/Job__c/fields/GroupKey__c.field-meta.xml
<CustomField>
    <fullName>GroupKey__c</fullName>
    <description>Optional indexed business grouping key, such as an order, invoice, customer, or tenant id.</description>
    <externalId>true</externalId>
    <inlineHelpText>Optional indexed business grouping key for SOQL lookups.</inlineHelpText>
    <label>Group Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>