sfdx-source/apex-queue/main/objects/Job__c/fields/JobScheduler__c.field-meta.xml
<CustomField>
    <fullName>JobScheduler__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Optional scheduler provenance for jobs materialized from JobScheduler__c.</description>
    <inlineHelpText>Set when this job was materialized by a JobScheduler.</inlineHelpText>
    <label>Job Scheduler</label>
    <referenceTo>JobScheduler__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>