sfdx-source/apex-queue/main/objects/Job__c/fields/LeaseExpiresAt__c.field-meta.xml
<CustomField>
    <fullName>LeaseExpiresAt__c</fullName>
    <description>Time when the current lease expires and runtime recovery may treat the job as stalled.</description>
    <inlineHelpText>Used to detect stalled active jobs.</inlineHelpText>
    <label>Lease Expires At</label>
    <type>DateTime</type>
</CustomField>