sfdx-source/apex-queue/main/objects/Job__c/fields/LeaseToken__c.field-meta.xml
<CustomField>
    <fullName>LeaseToken__c</fullName>
    <description>Opaque lease ownership token used to prove that the current worker still owns this active job.</description>
    <inlineHelpText>Set when the batch worker claims the job for execution.</inlineHelpText>
    <label>Lease Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>