sfdx-source/apex-queue/main/objects/Job__c/fields/MaxAttempts__c.field-meta.xml
<CustomField>
    <fullName>MaxAttempts__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Maximum number of attempts allowed before the job is terminally failed.</description>
    <inlineHelpText>Total attempts permitted for this job.</inlineHelpText>
    <label>Max Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>