sfdx-source/apex-queue/main/objects/Job__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Logical job name resolved within a queue.</description>
    <inlineHelpText>Job name used for processor resolution and admin visibility.</inlineHelpText>
    <label>Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>