sfdx-source/apex-queue/main/objects/Job__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional parent job reference reserved for dependency graph provenance.</description>
    <inlineHelpText>Dependency propagation is owned by FlowProducer; direct values are provenance only.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Child Jobs</relationshipLabel>
    <relationshipName>ChildJobs</relationshipName>
    <type>Lookup</type>
</CustomField>