sfdx-source/apex-queue/main/objects/Job__c/fields/PauseRequested__c.field-meta.xml
<CustomField>
    <fullName>PauseRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signals that a cooperative processor should stop at a safe boundary and defer remaining work.</description>
    <inlineHelpText>Used only for cooperative pause checks so the processor can finish safely and resume later.</inlineHelpText>
    <label>Pause Requested</label>
    <type>Checkbox</type>
</CustomField>