sfdx-source/apex-queue/main/objects/Job__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Lower numbers should be claimed ahead of higher numbers.</description>
    <inlineHelpText>Queue priority, where lower values are more urgent.</inlineHelpText>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>