sfdx-source/apex-queue/main/objects/Job__c/fields/ProcessorClass__c.field-meta.xml
<CustomField>
    <fullName>ProcessorClass__c</fullName>
    <description>Fully qualified Apex class name resolved for the job attempt.</description>
    <inlineHelpText>Stored at enqueue time so execution remains stable even if metadata changes later.</inlineHelpText>
    <label>Processor Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>