sfdx-source/apex-queue/main/objects/Job__c/fields/Progress__c.field-meta.xml
<CustomField>
    <description>Serialized progress information reported by the processor.</description>
    <fullName>Progress__c</fullName>
    <inlineHelpText>Progress payload or summary emitted during processing.</inlineHelpText>
    <label>Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>