sfdx-source/apex-queue/main/objects/Job__c/fields/QueueableDispatch__c.field-meta.xml
<CustomField>
    <fullName>QueueableDispatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ephemeral dispatch envelope that submitted this job through queueable transport.</description>
    <inlineHelpText>Only set for queueable-mode jobs created by a queueable enqueue or addBulk dispatch.</inlineHelpText>
    <label>Queueable Dispatch</label>
    <referenceTo>QueueableDispatch__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>