sfdx-source/apex-queue/main/objects/Job__c/fields/QueueableDispatchInitiatedAt__c.field-meta.xml
<CustomField>
    <fullName>QueueableDispatchInitiatedAt__c</fullName>
    <description>Timestamp when the queueable dispatcher first submitted this job to a queueable executor.</description>
    <inlineHelpText>Set once by the queueable dispatcher so retries cannot be picked up as undispatched jobs.</inlineHelpText>
    <label>Queueable Dispatch Initiated At</label>
    <type>DateTime</type>
</CustomField>