sfdx-source/apex-queue/main/objects/Job__c/fields/QueueScopedExternalId__c.field-meta.xml
<CustomField>
    <fullName>QueueScopedExternalId__c</fullName>
    <description>Internal queue-scoped unique key composed from QueueName__c and ExternalId__c for race-safe idempotent enqueue behavior.</description>
    <inlineHelpText>Internal queue-scoped unique key composed from QueueName__c and ExternalId__c.</inlineHelpText>
    <label>Queue Scoped External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>