sfdx-source/apex-queue/main/objects/Job__c/fields/ReturnValue__c.field-meta.xml
<CustomField>
    <description>Serialized processor return payload for completed jobs.</description>
    <fullName>ReturnValue__c</fullName>
    <inlineHelpText>Completion payload or result returned by the processor.</inlineHelpText>
    <label>Return Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>