sfdx-source/apex-queue/main/objects/Job__c/fields/StalledCount__c.field-meta.xml
<CustomField>
    <fullName>StalledCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times the sweeper has recovered this job from an expired lease.</description>
    <inlineHelpText>Incremented when active jobs are detected as stalled.</inlineHelpText>
    <label>Stalled Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>