sfdx-source/apex-queue/main/objects/Job__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Durable runtime lifecycle state for this job.</description>
    <inlineHelpText>Current queue state such as waiting, delayed, active, completed, failed, or canceled.</inlineHelpText>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>CANCELED</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>DELAYED</fullName>
                <label>Delayed</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>PAUSED</fullName>
                <label>Paused</label>
            </value>
            <value>
                <fullName>WAITING</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>WAITING_CHILDREN</fullName>
                <label>Waiting Children</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>